--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'push'
         with:
           if-no-files-found: error
           name: build_artifact
