--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,29 +1,71 @@
-name: Release
+name: Build
 
 on:
-  workflow_run:
-    workflows: [Build]
-    branches: [main]
-    types: [completed]
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
 jobs:
-  build-release:
-    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event_name == 'pull_request' }}
+
+  build-ubuntu-latest:
+    
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/download-artifact@v3
-        with:
-          name: build_artifact
-          path: ${GITHUB_SHA}-*.txt
+      - name: Compile
+        run: |
+          cat /proc/cpuinfo
+          echo "file_created $(date)" > ${{ github.sha }}-ubuntu.txt
 
-      - uses: "marvinpinto/action-automatic-releases@latest"
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        if: github.event_name == 'pull_request'
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
-          title: "Development Build"
-          files: |
-            *.txt
+          if-no-files-found: error
+          name: build_artifact
+          path: ${{ github.sha }}-ubuntu.txt
+
+  build-ubuntu-latest2:
+    
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Compile
+        run: |
+          cat /proc/cpuinfo
+          echo "file_created2 $(date)" > ${{ github.sha }}-ubuntu2.txt
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        if: github.event_name == 'pull_request'
+        with:
+          if-no-files-found: error
+          name: build_artifact
+          path: ${{ github.sha }}-ubuntu2.txt
+
+  build-complete:
+
+    runs-on: ubuntu-latest
+    needs: [build-ubuntu-latest, build-ubuntu-latest2]
+
+    # if: ${{ github.event.workflow_run.conclusion == 'success' && github.event_name == 'pull_request' }}
+    steps:
+      - name: complete
+        run: |
+          echo "complete $(date)" > ${{ github.sha }}-complete.txt
+
+      - name: Completion
+        uses: actions/upload-artifact@v3
+        with:
+          if-no-files-found: error
+          name: build_artifact
+          path: ${{ github.sha }}-complete.txt
