--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-ubuntu-latest, build-ubuntu-latest2]
 
-    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event_name == 'pull_request' }}
+    if: ${{ github.event_name == 'pull_request' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -67,7 +67,6 @@ jobs:
         with:
           if-no-files-found: error
           name: build_artifact
-          path: ${{ github.sha }}-*.txt
 
       - name: Check files
         run: |
