--- a/scripts/docker_ubuntu18.04/Dockerfile
+++ b/scripts/docker_ubuntu18.04/Dockerfile
@@ -12,10 +12,11 @@ ADD scripts /tmp/scripts
 ADD llvm-project.tar.gz /tmp
 
 # Compile LLVM
-ARG build_type
+ARG cmake_configs
 ARG install_dir_name
-RUN mkdir /tmp/llvm-project/build && cd /tmp/llvm-project/build && /tmp/cmake-3.24.0-linux-x86_64/bin/cmake /tmp/llvm-project/llvm -DLLVM_ENABLE_PROJECTS="mlir" -DCMAKE_BUILD_TYPE=${build_type} -DLLVM_TARGETS_TO_BUILD="X86;NVPTX;AMDGPU" -DCMAKE_INSTALL_PREFIX="/tmp/${install_dir_name}" -DLLVM_ENABLE_ASSERTIONS=True
-RUN cd /tmp/llvm-project/build && make -j $(nproc) install
+RUN mkdir /tmp/llvm-project/build && cd /tmp/llvm-project/build && /tmp/cmake-3.24.0-linux-x86_64/bin/cmake /tmp/llvm-project/llvm $cmake_configs -DCMAKE_INSTALL_PREFIX="/tmp/${install_dir_name}"
+ARG num_jobs
+RUN cd /tmp/llvm-project/build && make -j ${num_jobs} install
 
 # Create a tarball
 RUN cd /tmp && tar -cJf "${install_dir_name}.tar.xz" "${install_dir_name}"
