--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Compile
         run: |
-          LLVM_VER="$(python3 build/get_llvm_version.py llvm-project/llvm/CMakeLists.txt)"
+          LLVM_VER="$(python3 scripts/get_llvm_version.py llvm-project/llvm/CMakeLists.txt)"
 
           CPU_ARCH="x86_64"
 
@@ -46,7 +46,7 @@ jobs:
 
           FILENAME="llvm+mlir-${LLVM_VER}-${CPU_ARCH}-${PLATFORM_NAME}-${CONFIG_SUFFIX}.tar.xz"
 
-          sh build/build_llvm.sh -f $FILENAME -p $BUILD_PLATFORM -c ${{ matrix.config }} -j 4
+          bash build/build_llvm.bash -f $FILENAME -p $BUILD_PLATFORM -c ${{ matrix.config }} -j 4
 
           mkdir -p ${{ github.sha }}
           mv *.tar.xz ${{ github.sha }}/*.tar.xz
